<resources>
    <string name="app_name">CS213-Project5</string>
    <string name="CurrentOrder">Current Order</string>
    <string name="main_menu_title">RU Pizza Main Menu</string>
    <string name="choose_pizza_type">Choose a type of Pizza</string>
    <string name="chicago_style_pizza">Chicago Style Pizza</string>
    <string name="ny_style_pizza">New York Style Pizza</string>
    <string name="check_all_orders">Check All Orders</string>
    <string name="check_current_order">Check Current Order</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="crust">Crust:</string>
    <string name="thin">Thin</string>
    <string name="price">Pizza Price:</string>
    <string name="available_toppings">Available Toppings:</string>
    <string name="selected_toppings">Selected Toppings:</string>
    <string name="add_topping">Add Topping</string> <!-- Escaped >> -->
    <string name="remove_topping">Remove Topping</string> <!-- Escaped << -->
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="place_order">Place Order</string>
    <string name="zero">0</string>
    <string name = "brooklyn">Brooklyn</string>
    <string name = "handtossed">Hand-tossed</string>
    <string name = "deepdish">Deep Dish</string>
    <string name = "pan">Pan</string>
    <string name = "stuffed">Stuffed</string>
    <string-array name="pizza_types">
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
        <item>Build Your Own</item>
    </string-array>
    <string name="orders">Store Orders</string>
    <string name="orderNumber">Order Number</string>
    <string name="orderTotal">Order Total: $</string>
    <string name="total">Order Total $</string>
    <string name="zeros">0.00</string>
    <string name="cancel">Cancel Order</string>
    <string name="enterNumber">Enter Order Number </string>
    <string name="subtotal">Subtotal: $</string>
    <string name="tax">Sales Tax $</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove Pizza</string>
    <string name="place">Place Order</string>
    <string name = "pizzaPrice">%1$.2f</string>
</resources>
