<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="264dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:text="@string/CurrentOrder"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.632"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="96dp"
            android:text="@string/orderNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderNumber"
            android:layout_width="136dp"
            android:layout_height="17dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="113dp"
            android:layout_height="30dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listView" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="113dp"
            android:layout_height="30dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/tax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/orderTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="202dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/listView" />

        <TextView
            android:id="@+id/salesTax"
            android:layout_width="202dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/subtotal" />

        <TextView
            android:id="@+id/curOrderTotal"
            android:layout_width="212dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/salesTax" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="100dp"
            android:onClick="removePizza"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="placeOrder"
            android:text="@string/place_order"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toEndOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="104dp"
            android:onClick="clearButton"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:onClick="launchMenu"
            android:text="@string/back_to_main_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="339dp"
            android:layout_height="272dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>